[tool.poetry]
name = "llama"
version = "0.1.0"
description = ""
authors = ["John <john.loverich@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "2.0.0"
fairscale = "^0.4.13"
fire = "^0.5.0"
sentencepiece = "^0.1.99"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
